k8s/tools/voidauth/middleware.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: voidauth
  namespace: default
spec:
  forwardAuth:
    address: "http://voidauth.tools.svc.cluster.local/api/authz/forward-auth"
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Name
      - Remote-Email
      - Remote-Groups
