k8s/tools/voidauth/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: voidauth
  namespace: default
  labels:
    app: voidauth
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: voidauth
